<resources>
    <string name="app_name">DirAct</string>
    <string name="introduce_app">댄스팀을 위한 효과적인 피드백 앱</string>
    <string name="google_login">Google 계정으로 로그인</string>
    <string name="login_failed_title">로그인 실패</string>
    <string name="login_failed_content">로그인을 실패했습니다.\n다시 시도해 주세요.</string>
    <string name="close">닫기</string>
    <string name="agreement_prompt">서비스 이용을 위해\n약관에 동의해주세요.</string>
    <string name="agree_all">전체 동의</string>
    <string name="required">필수</string>
    <string name="agree_privacy_policy"><u>개인정보 처리 방침 동의</u></string>
    <string name="age_confirmation">저는 만 14세 이상입니다.</string>
    <string name="agree_terms_of_service"><u>서비스 이용약관 동의</u></string>
    <string name="greeting_title">만나서 반가워요!</string>
    <string name="name_edit_text_hint">이름을 입력하세요</string>
    <string name="name_confirmation">이름이 정확한가요?</string>
    <string name="id">ID</string>
    <string name="unknown">UNKNOWN</string>
    <string name="my_name">나의 이름</string>
    <string name="privacy_policy">개인정보처리방침</string>
    <string name="terms_of_service">서비스 이용약관</string>
    <string name="notification">알림 수신</string>
    <string name="account_setting">계정 설정</string>
    <string name="app_version">앱 버전</string>
    <string name="customer_support">문의 및 고객 지원</string>
    <string name="about_diract">Diract를 만든 사람들</string>
    <string name="logout">로그아웃</string>
    <string name="dialog_logout_content">정말 로그아웃하시겠어요?</string>
    <string name="delete_account">회원 탈퇴</string>
    <string name="dialog_delete_account_title">회원을 탈퇴하시겠어요?</string>
    <string name="dialog_delete_account_content">회원 정보가 삭제되고 되돌릴 수 없습니다.</string>
    <string name="dialog_delete_account_btn">탈퇴</string>
    <string name="delete_account_failed">회원 탈퇴에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="update_name_failed">문제가 발생했습니다.</string>
    <string name="set_my_name">나의 이름 설정</string>
    <string name="change_name">변경하기</string>
    <string name="inquiry_title">문의 및 제보 사항을 작성해 주세요.</string>
    <string name="submit_inquiry">접수하기</string>
    <string name="home">홈</string>
    <string name="inbox">수신함</string>
    <string name="my_page">마이 페이지</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_teamspace_create">팀 스페이스를 생성하세요</string>
    <string name="home_teamspace_create_title">팀 스페이스를 만들어보세요</string>
    <string name="home_teamspace_create_message">팀만의 공간을 만들고 영상으로 피드백을 시작해보세요.</string>
    <string name="home_teamspace_empty">팀 스페이스를 만들어주세요.</string>
    <string name="create_teamspace">팀 스페이스 만들기</string>
    <string name="home_teamspace_current_name">현재 팀스페이스 이름</string>
    <string name="home_empty_add_project_title">프로젝트를 추가해보세요.</string>
    <string name="home_tooltip_manage_teamspace_title">팀 스페이스를 관리해보세요</string>
    <string name="home_tooltip_manage_teamspace_message">팀원을 초대하거나 팀 스페이스 이름을 변경할 수 있습니다.</string>
    <string name="home_empty_add_project_card_title">프로젝트를 추가해보세요</string>
    <string name="home_empty_add_project_card_message">곡과 영상을 담을 수 있는 공간입니다.</string>
    <string name="teamspace_manage">팀스페이스 관리</string>
    <string name="create_project">프로젝트 만들기</string>
    <string name="project_section_title">프로젝트</string>
    <string name="project_add">추가</string>
    <string name="home_project_title">프로젝트</string>
    <string name="project_action_rename">이름 수정</string>
    <string name="project_action_delete">삭제</string>
    <string name="project_list_title">프로젝트 목록</string>
    <string name="teamspace_create_title">팀 스페이스 만들기</string>
    <string name="teamspace_create_prompt">팀 스페이스 이름을 입력하세요.</string>
    <string name="teamspace_name_hint">팀 이름</string>
    <string name="teamspace_create_cta">팀 스페이스 만들기</string>
    <string name="project_create_title">새 프로젝트 만들기</string>
    <string name="project_create_prompt">프로젝트 이름을 입력하세요.</string>
    <string name="project_name_hint">(예시) 대동제</string>
    <string name="project_create_cta">새 프로젝트 만들기</string>
    <string name="teamspace_current_name">현재 팀스페이스 이름</string>
    <string name="teamspace_members">팀원</string>
    <string name="teamspace_empty_members">팀원을 초대해보세요.</string>
    <string name="teamspace_invite_members_hint">팀원을 초대하세요.</string>
    <string name="teamspace_action_leave">팀 스페이스 나가기</string>
    <string name="teamspace_action_delete">팀 스페이스 삭제하기</string>
    <string name="teamspace_action_give_owner">팀장 권한 주기</string>
    <string name="teamspace_action_kick">팀원 내보내기</string>
    <string name="teamspace_action_kick_btn">내보내기</string>
    <string name="teamspace_rename_title">팀 스페이스 이름 수정</string>
    <string name="teamspace_rename_failed">팀 스페이스 이름 수정을 실패했습니다.</string>
    <string name="teamspace_give_owner_failed">팀장 권한 주기를 실패했습니다.</string>
    <string name="teamspace_load_failed">불러오기를 실패했습니다.</string>
    <string name="teamspace_invite">팀에 멤버 초대하기</string>
    <string name="teamspace_invite_title">팀 스페이스에 팀원을\n 초대해 보세요.</string>
    <string name="teamspace_invite_message">팀원 태그를 통해 피드백을 주고받을 수 있습니다.</string>
    <string name="teamspace_invite_later">다음에 하기</string>
    <string name="more">더보기</string>
    <string name="done">완료</string>
    <string name="create_new_teamspace">새 팀 스페이스 만들기</string>
    <string name="team_member_more">멤버 더보기</string>
    <string name="close_team_member_more">멤버 더보기 닫기</string>
    <string name="kick_from_team">팀에서 내보내기</string>
    <string name="network_error_teamspace">불러오기를 실패했습니다</string>
    <string name="teamspace_create_failed">팀스페이스 생성에 실패했습니다.</string>
    <string name="teamspace_kick_members_title">선택한 팀원들을 내보내시겠어요?</string>
    <string name="teamspace_kick_members_desc">이후 다시 초대할 수 있습니다.</string>
    <string name="dialog_teamspace_leave_teamspace_title"> 팀 스페이스를 나가시겠어요?</string>
    <string name="dialog_teamspace_leave_teamspace_message">다시 초대받아 참여할 수 있습니다.</string>
    <string name="dialog_teamspace_leave_teamspace">나가기</string>
    <string name="dialog_teamspace_kick_title">%1$s 팀원을 내보내시겠어요?</string>
    <string name="dialog_teamspace_kick_message">이후 다시 초대할 수 있습니다.</string>
    <string name="dialog_teamspace_kick_action">내보내기</string>
    <string name="dialog_teamspace_delete_title">%1$s 팀 스페이스를 삭제하시겠어요?</string>
    <string name="dialog_teamspace_delete_message">팀 스페이스와 멤버 목록이 모두 초기화되며 되돌릴 수 없습니다.</string>
    <string name="dialog_teamspace_leader_cannot_leave_title">팀 스페이스를 나갈 수 없습니다.</string>
    <string name="dialog_teamspace_leader_cannot_leave_message">팀 스페이스에서 나가려면 팀장 권한을 다른 팀원에게 양도해야합니다.</string>
    <string name="error_create_teamspace">빈칸</string>
    <string name="error_load_members">빈칸</string>
    <string name="error_kick_members">빈칸</string>
    <string name="teamspace_leave_success">성공</string>
    <string name="teamspace_leave_failed">실패</string>
    <string name="teamspace_invite_link_failed">초대 링크 생성을 실패했습니다.</string>
    <string name="invite_accept_success">팀에 참여했습니다.</string>
    <string name="invite_accept_failed">초대 수락에 실패했습니다.</string>
    <string name="project_add_song">곡 추가하기</string>
    <string name="project_empty_add_song_message">곡이 없습니다. 추가해보세요</string>
    <string name="project_action_playlist_name">플레이리스트 이름</string>
    <string name="error_load_songs">곡을 불러올 수 없습니다.</string>
    <string name="song_load_failed">곡</string>
    <string name="song_list_name_header">곡 리스트 이름</string>
    <string name="song_list_name_max_warning">곡 이름은 20자 이하로 입력해주세요.</string>
    <string name="song_">곡 이름은 20자 이하로 입력해주세요.</string>
    <string name="dialog_song_cannot_recover">곡 안의 모든 내용이 사라집니다.</string>
    <string name="dialog_song_delete_title">%1$s 곡을 삭제하시겠어요?</string>
    <string name="song_add_prompt">추가할 곡의 이름을 입력하세요</string>
    <string name="song_add_title">곡 추가하기</string>
    <string name="song_name_hint">(예시) SEVENTEEN - 만세</string>
    <string name="song_add_cta">곡 추가하기</string>
    <string name="toast_song_delete_success">곡이 삭제되었습니다.</string>
    <string name="toast_song_delete_fail">곡 삭제를 실패했습니다.</string>
    <string name="toast_project_delete_success">프로젝트 삭제되었습니다.</string>
    <string name="toast_project_delete_fail">프로젝트 삭제를 실패했습니다.</string>
    <string name="toast_project_rename_success">프로젝트 이름을 수정했습니다.</string>
    <string name="toast_project_rename_fail">프로젝트 이름 수정을 실패했습니다.</string>
    <string name="toast_project_create_fail">프로젝트 만들기를 실패했습니다.</string>
    <string name="retry">재시도 ↻</string>
    <string name="add_video">영상 추가</string>
    <string name="add_video_message">동영상을 추가해보세요</string>
    <string name="compressing">압축중</string>
    <string name="upload_progress">%d%%</string>
    <string name="compression_failed">압축 실패</string>
    <string name="compression_error_message">압축 중 오류가 발생했습니다.</string>
    <string name="upload_failed">업로드 실패</string>
    <string name="network_error_message">네트워크 상태를 확인해 주세요.</string>
    <string name="size_exceeded">용량 초과</string>
    <string name="size_exceeded_message">100MB까지 업로드 가능합니다.</string>
    <string name="cancel">취소</string>
    <string name="error_load_failed">불러오기를 실패했습니다.</string>
    <string name="error_check_network">네트워크를 확인해 주세요.</string>
    <string name="add_section">섹션 추가</string>
    <string name="set_section_title">파트 관리</string>
    <string name="add_section_message">파트를 추가해보세요.</string>
    <string name="edit_section_name_hint">파트 이름</string>
    <string name="set_section_header">파트 리스트</string>
    <string name="section_default_name">기본 파트</string>
    <string name="confirm">확인</string>
    <string name="error_edit_section_message">파트를 수정하는 중에 문제가 발생했습니다.</string>
    <string name="error_delete_section_message">파트를 삭제하는 중에 문제가 발생했습니다.</string>
    <string name="move_video_select_section">파트 선택</string>
    <string name="move_video_confirm_btn_txt">비디오 이동하기</string>
    <string name="edit_name_option">이름 수정</string>
    <string name="delete_option">삭제</string>
    <string name="move_part_option">다른 파트로 이동</string>
    <string name="report_option">신고하기</string>
    <string name="edit_feedback_option">피드백 수정</string>
    <string name="edit_comment_option">댓글 수정</string>
    <string name="dialog_confirm">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_delete">삭제</string>
    <string name="dialog_exit">나가기</string>
    <string name="dialog_discard_title">변경사항이 저장되지 않았습니다. 종료하시겠어요?</string>
    <string name="dialog_discard_message">저장하지 않은 변경사항은 사라집니다.</string>
    <string name="dialog_discard">취소하기</string>
    <string name="dialog_delete_part_title">%1$s을/를 삭제하시겠어요?</string>
    <string name="dialog_cannot_recover">모든 영상이 삭제되며 복구할 수 없습니다.</string>
    <string name="dialog_default_complete">완료되었습니다.</string>
    <string name="dialog_delete_video_title">%1$s을/를 삭제하시겠어요?</string>
    <string name="dialog_delete_video_content">삭제하면 복구할 수 없습니다.</string>
    <string name="dialog_cancel_writing_feedback_title">작성 중인 피드백이 있습니다. 나가시겠어요?</string>
    <string name="dialog_cancel_writing_feedback_content">작성 중인 피드백은 저장되지 않습니다.</string>
    <string name="dialog_cancel_writing_comment_title">작성 중인 내용이 있습니다. 나가시겠어요?</string>
    <string name="dialog_cancel_writing_comment_content">작성 중인 내용은 저장되지 않습니다.</string>
    <string name="inquiry_hint">작은 피드백이라도 큰 힘이 됩니다.</string>
    <string name="inquiry_error_max_length">100자 미만으로 입력해 주세요.</string>
    <string name="inquiry_success">소중한 의견이 접수되었습니다.\n조치사항은 로그인 계정으로 안내드리겠습니다.</string>
    <string name="inquiry_failed">문제가 발생했습니다.</string>
    <string name="input_dialog_counter">%1$d/%2$d</string>
    <string name="input_dialog_error_max_length">%d자 이하로 입력해 주세요.</string>
    <string name="clear">clear</string>
    <string name="toast_section_name_max_length">%1$d자 이하로 입력해 주세요.</string>
    <string name="toast_delete_video">동영상이 삭제되었습니다.</string>
    <string name="toast_upload_video">동영상이 업로드 되었습니다.</string>
    <string name="toast_failed_delete_video">동영상 삭제를 실패했습니다.</string>
    <string name="toast_failed_edit_video_title">이름 수정을 실패했습니다.</string>
    <string name="toast_move_video">동영상이 이동되었습니다.</string>
</resources>