<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="138dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_app_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/establish_retrosans"
            android:text="@string/app_name"
            android:textColor="@color/label_strong"
            android:textSize="44dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/introduce_app"
            android:textAppearance="@style/Heading1.Semibold"
            android:textColor="@color/label_assistive" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="310dp"
        android:layout_height="54dp"
        android:backgroundTint="#ffffff"
        android:fontFamily="@font/roboto_medium"
        android:paddingHorizontal="15dp"
        android:text="@string/google_login"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconSize="20dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
